--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-  
+
+      - name: Printer
+        run: echo ${github.event.repository.name}
+
       - name: Vault Connector
         uses: hashicorp/vault-action@v2.4.0
         with:
@@ -33,4 +36,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ${env.SECRET}
+        run: echo ${env.SECRET}
