--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Printer
-        run: echo ${github.event.repository.name}
+        run: echo "${github.event.repository.name}"
 
       - name: Vault Connector
         uses: hashicorp/vault-action@v2.4.0
